--- a/client-app/manifest.json
+++ b/client-app/manifest.json
@@ -1,20 +1,32 @@
 {
     "name": "PWA de Localização",
     "short_name": "Locação PWA",
-    "start_url": "/index.html",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#000000",
+    "theme_color":"#ffffff",
+    "orientation": "portrait",
     "description": "Uma PWA que envia a localização do usuário.",
     "icons": [
       {
-        "src": "icon-192.png",
+        "src": "images/icon-192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "icon-512.png",
+        "src": "images/icon-512.png",
         "sizes": "512x512",
         "type": "image/png"
+      }
+    ],
+    "screenshots": [    
+      {
+
+        "src": "images/image1.png",
+        "sizes": "640x320",
+        "type": "image/png",
+        "form_factor": "narrow",
+        "label": "Application"
       }
     ]
   }
