--- a/server-app/package.json
+++ b/server-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "sqlite3": "^5.1.7",
     "web-push": "^3.6.7"
   }
