--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-google-maps/api": "^2.20.5",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.0"
@@ -22,8 +24,8 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "sass": "^1.83.0",
