--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
+    "sass": "^1.83.1",
     "stylelint": "^16.12.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-styled-components": "^0.1.1"
