--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
+    "react-confirm-box": "^1.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.0"
   },
